--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="./assets/base.css" />
         <link rel="stylesheet" href="./assets/style.css" />
         <link rel="stylesheet" href="./assets/pygments.css" />
-        <script src="http://aralejs.org/dist/seajs/1.2.0/sea.js" id="seajsnode"></script>
+        <script src="https://a.alipayobjects.com/static/arale/seajs/1.1.8/sea.js" id="seajsnode"></script>
         
         
         <!--[if lt IE 9]>
