--- a/tests/runner.html
+++ b/tests/runner.html
@@ -1,16 +1,13 @@
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>overlay Jasmine Runner</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
-        <script src="https://a.alipayobjects.com/static/arale/seajs/1.2.0/sea.js"></script>        
-        <script src="http://aralejs.org/tools/seajs-helper.js"></script>
-        <script src="http://aralejs.org/tools/jasmine-runner.js"></script>
-        <!--[if lt IE 9]>
-        <script type="text/javascript" src="http://aralejs.org/assets/html5shiv.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-    </body>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
+<title>Widget Spec Runner</title>
+<script src="http://seajs.org/dist/sea.js"></script>
+<script src="http://aralejs.org/tools/seajs-helper.js"></script>
+<script src="http://aralejs.org/tools/jasmine-runner.js"></script>
+</head>
+<body>
+</body>
 </html>
