Add callback for Widget.autoRenderAll

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ DOM 内容有修改时，无需重新绑定。</p>
 <p>这是从 Events 中自动混入进来的方法。还包括 <code>off</code> 和 <code>trigger</code>。</p>
 <p>具体使用请参考 <a href="http://aralejs.org/events/">events 使用文档</a>。</p>
 
-<h3>autoRenderAll <code>Widget.autoRenderAll(root)</code></h3>
+<h3>autoRenderAll <code>Widget.autoRenderAll([root], [callback])</code></h3>
 <p>根据 data-widget 属性，自动渲染找到的所有 Widget 类组件。</p>
 
 <h2>Templatable</h2>
